--- a/assets/styles/_new.scss
+++ b/assets/styles/_new.scss
@@ -194,11 +194,13 @@
   }
   &:hover + .button--secondary {
     color: $color-sparkblue-light;
-    background-color: $color-jellybean-blue;
+    background-color: darken($color-fountain-blue, 20%);
   }
   &:focus + .button--secondary {
+    color: $color-sparkblue-light;
     outline: 1px dotted $color-black;
     outline: 5px auto -webkit-focus-ring-color;
+    background-color: darken($color-fountain-blue, 20%);
   }
 }
 
@@ -245,7 +247,7 @@
   &:hover,
   &:focus {
     color: $color-sparkblue-light;
-    background-color: $color-jellybean-blue;
+    background-color: darken($color-fountain-blue, 20%);
     transition: all 500ms cubic-bezier(0, 1.08, 0.65, 0.98);
   }
 }
@@ -262,8 +264,8 @@
   padding: 0.75rem;
   &:hover,
   &:focus {
-    color: $color-sparkblue-light;
-    background-color: $color-jellybean-blue;
+    color: $color-white;
+    background-color: darken($color-fountain-blue, 20%);
     transition: all 500ms cubic-bezier(0, 1.08, 0.65, 0.98);
   }
 }
