--- a/assets/styles/_place-card.scss
+++ b/assets/styles/_place-card.scss
@@ -41,7 +41,8 @@
     right: 0;
     position: absolute;
     transition: all 500ms cubic-bezier(0, 1.08, 0.65, 0.98);
-    &:hover {
+    &:hover,
+    &:focus {
       color: $color-sparkblue-light;
       background-color: darken($color-fountain-blue, 20%);
     }
